0.5.6
- Bugfixes:
  - Define "Video Frame Offset" parameter to correctly index frames (#46)
0.5.5
- Bugfixes:
  - String formatter did not work (#40)
  - Regression in dclab<0.1.5 (#43)
0.5.4
- Changes in dclab:
  - Support for 3-channel fluorescence data (add corrections 21:42)
  - Fix behaviour with empty columns (#1 dclab)
0.5.3
- Fixes in dclab:
  - Use correct lateral position (from channel walls) (#37) 
  - Compute aspect ratio according to elongation along flow (#38)
- Allow to change thickness of contour lines (#34)
- Display number of events in statistics tab (#35)
- Improve visual representation in statistics tab
0.5.2
- Bugfix: PDF export did not work (#33)
- Fix disappearance of scrollbars upon hitting apply in controls
0.5.1
- New logo (#25)
- Bugfix: Analysis tab reset button (#30)
- Display correct axis names in Plotting tab
- Fix appveyor build script with pinning and downgrades
0.5.0
- Include full R installation with lme4 package in Windows installer
- Added Analysis tab for application of linear mixed-effects models (#15)
- Allow individual polygon filters for each scatter plot
- Bugfix: Changing filters did not update statistics tab (#24)
0.4.9
- Bugfix: statistics panel head was in wrong order
- Allow to fix contour plot scaling (#9)
- Ordered parameters in control panels 
0.4.8
- New statistics tab (#6)
- Minor improvements of GUI
- Update from dclab: errors when using MV KDE (#20)
0.4.7
- Fix loading of sessions (#17)
0.4.6
- Limit number of events for data analysis (#11)
- Automatically set number of events for multiple data sets (#11)
- Display number of used events on plots (#10)